# god-graph

./: CHANGELOG.md  Cargo.toml  GRAPH_TENSOR_INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  Miri.toml  OPTIMIZATION_REPORT_2026_04_08.md  OPTIMIZATION_SUMMARY.md  P11_CRITICAL_REVIEW.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RELEASE_NOTES_v0.3.1.md  ROADMAP.json  TASK3_API_RETURN_TYPE_UNIFICATION.md  TASK4_UNSAFE_CODE_FIXES.md  TASK7_VGI_DESIGN_IMPROVEMENTS.md  TASK7_VGI_DESIGN_IMPROVEMENTS_COMPLETE.md  TASK9_EXAMPLE_FIXES_COMPLETE.md  TENSOR_OPTIMIZATION_REPORT.md  build.rs  cobertura.xml  coverage.sh  critical_review.json  gap_analysis.json  tensor_optimization_plan.json
.github/workflows/: ci.yml  release.yml
.qwen/: settings.json  settings.json.orig
benches/: centrality.rs  comparison.rs  construction.rs  distributed.rs  large_scale_graph.rs  memory_pool_reduction.rs  parallel.rs  shortest_path.rs  speedup.rs  tensor_arena.rs  tensor_ops.rs  tensor_pool.rs  transformer.rs  transformer_inference.rs  traversal.rs
coverage/: tarpaulin-report.html
docs/: API_STABILITY_REVIEW.md  ARCHITECTURE_WHITEPAPER.md  DISTRIBUTED_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENT_REFACTORING_SUMMARY.md  FAQ.md  FAULT_TOLERANCE_GUIDE.md  MIGRATION_GUIDE_v0.6.md  MIGRATION_GUIDE_v0.7_VGI_LAYERED_API.md  PERFORMANCE_TUNING_GUIDE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_PLUGIN_ECOSYSTEM_PLAN.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_PROGRESS_REPORT.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  RELEASE_NOTES_v0.6.0-alpha.md  SKILL.md  VGI_ARCHITECTURE_SUMMARY.md  VGI_GUIDE.md  VGI_IMPLEMENTATION_PLAN.md  VGI_PHASE1_PROGRESS.md  VGI_PHASE1_SUMMARY.md  VGI_PHASE2_PROGRESS.md  VGI_PHASE3_PROGRESS.md  VGI_PROGRESS_SUMMARY.md  differentiable_graph.md  migration-from-petgraph.md  performance.md
docs/internals/: architecture.md  cad-design.md
docs/reports/: distributed-benchmarks.md  documentation-update-log.md  implementation-status.md  parallel-visualization-plan.md  performance-benchmarks.md  performance-optimization.md  performance.md  performance_optimization_phase3.md  performance_optimization_phase3_complete.md  performance_optimization_summary.md  performance_optimization_summary_v2.md  project-progress.md  todo-implementation-status.json  todo-implementation-status.md  transformer-enhancements.md  validation.md
docs/user-guide/: differentiable-graph.md  getting-started.md  migration-from-petgraph.md  transformer-guide.md  transformer-tutorial.md  visualization.md
examples/: cad_llm_editor.rs  cad_llm_optimization_workflow.rs  cad_llm_orthogonalize.rs  cad_llm_switch.rs  cad_llm_tensor_ring.rs  cad_llm_validate_1b.rs  differentiable_attention_pruning.rs  differentiable_graph.rs  export_model_dot.rs  graph_transformer_execution.rs  graph_viewer.html  lie_group_orthogonalization.rs  llama_forward.rs  llm_batch_simd.rs  llm_model_loader.rs  llm_text_gen.rs  neural_architecture_search.rs  tinyllama_validation.rs  topology_defect_detection.rs  transformer_advanced.rs  transformer_basic.rs  transformer_overview.rs
examples/dot-examples/: graph_transformer.dot  model.dot
models/tinyllama/: config.json  model.safetensors
scripts/: check_coverage.sh  download_tinyllama.py  download_tinyllama.sh
src/: ai_intent.rs  errors.rs  lib.rs  main.rs  prelude.rs
src/algorithms/: centrality.rs  community.rs  flow.rs  matching.rs  mod.rs  mst.rs  parallel.rs  properties.rs  shortest_path.rs  traversal.rs
src/backend/: mod.rs  single_machine.rs  traits.rs
src/edge/: mod.rs
src/export/: adjacency_list.rs  dot.rs  edge_list.rs  mod.rs  svg.rs
src/generators/: barabasi_albert.rs  complete.rs  erdos_renyi.rs  grid.rs  mod.rs  tree.rs  watts_strogatz.rs
src/graph/: builders.rs  graph_impl.rs  impl_.rs  iterators.rs  mod.rs  traits.rs
src/mcp/: mod.rs  server.rs  tools.rs  types.rs
src/node/: mod.rs
src/parallel/: communication.rs  executor.rs  fault_tolerance.rs  mod.rs
src/parallel/algorithms/: bfs.rs  connected_components.rs  dfs.rs  dijkstra.rs  mod.rs  pagerank.rs
src/parallel/partitioner/: hash.rs  mod.rs  range.rs  traits.rs
src/plugins/: algorithm.rs  mod.rs  registry.rs
src/plugins/algorithms/: bellman_ford.rs  betweenness_centrality.rs  bfs.rs  closeness_centrality.rs  connected_components.rs  dfs.rs  dijkstra.rs  louvain.rs  mod.rs  pagerank.rs  topological_sort.rs
src/tensor/: backend.rs  dense.rs  differentiable.rs  error.rs  gnn.rs  graph_tensor.rs  mod.rs  ops.rs  pool.rs  sparse.rs  traits.rs  types.rs  unified_graph.rs
src/tensor/decomposition/: lie_algebra.rs  mod.rs  qr.rs  svd.rs  tensor_ring.rs
src/transformer/: generation.rs  inference.rs  mod.rs  model.rs  perf.rs
src/transformer/autograd/: compute_graph.rs  mod.rs  op.rs  optimizer.rs  tensor.rs
src/transformer/batch/: mod.rs
src/transformer/graph_transformer/: edges.rs  execution.rs  mod.rs  nodes.rs
src/transformer/kv_cache/: mod.rs
src/transformer/layers/: attention.rs  embedding.rs  ffn.rs  mod.rs  norm.rs
src/transformer/loader/: config.rs  mod.rs  safetensors.rs  weight_mapper.rs
src/transformer/optimization/: cad_editor.rs  constraints.rs  error_analysis.rs  lie_group.rs  mod.rs  switch.rs  tensor_ring.rs
src/transformer/quantization/: mod.rs
src/transformer/sparse_attention/: mod.rs
src/utils/: arena.rs  batch.rs  branch.rs  cache.rs  matrix.rs  memory_pool.rs  mod.rs  simd_avx512.rs
src/vgi/: builder.rs  error.rs  impl_graph.rs  metadata.rs  mod.rs  simple.rs  traits.rs
tests/: cad_llm_integration.rs  community_tests.rs  edge_index_mut_tests.rs  error_analysis_integration.rs  flow_tests.rs  graph_tensor_stability.rs  graph_transformer_execution.rs  integration_tests.rs  loom_tests.rs  property_tests.proptest-regressions  property_tests.rs  real_model_validation.rs  transformer_integration.rs
