[package]
name = "god-gragh"
version = "0.3.1-beta"
edition = "2021"
rust-version = "1.85"
authors = ["silverenternal <3147264070@qq.com>"]
description = "A high-performance, feature-rich Rust graph operations library with comprehensive algorithm support and parallel processing capabilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silverenternal/god-graph"
homepage = "https://github.com/silverenternal/god-graph"
documentation = "https://docs.rs/god-gragh"
readme = "README.md"
keywords = ["graph", "algorithms", "data-structures", "parallel", "performance"]
categories = ["data-structures", "algorithms", "science"]
exclude = [".github/", "benches/", "tests/", "examples/", "ROADMAP.json"]

[features]
default = ["std"]

# 标准库支持（始终启用）
std = []

# 并行算法支持
parallel = ["dep:rayon", "dep:crossbeam-queue"]

# 序列化支持
serde = ["dep:serde"]

# Rayon 集成（并行迭代器）
rayon-support = ["dep:rayon"]

# DOT 格式导出（Graphviz 可视化）
dot = []

# 矩阵表示和线性代数集成
matrix = ["dep:nalgebra"]

# 随机图生成
rand = ["dep:rand", "dep:rand_chacha"]

# 夜间 Rust 特性（实验性）
unstable = []

# SIMD 向量化支持（实验性）
# 使用 wide crate 实现 SIMD，支持 stable Rust
simd = ["dep:wide"]

# Tensor 核心支持（启用 ndarray 后端）
tensor = ["dep:ndarray"]

# Sparse Tensor 格式（COO, CSR, BSR）
tensor-sparse = ["tensor"]

# GPU 加速（通过 dfdx，需要 CUDA）
tensor-gpu = ["tensor", "dep:dfdx"]

# Candle 后端（Hugging Face 的轻量级 tensor 库）
tensor-candle = ["tensor", "dep:candle-core"]

# 自动微分支持
tensor-autograd = ["tensor", "dep:dfdx"]

# Tensor 序列化
tensor-serde = ["tensor", "dep:serde"]

# GNN 层（GCN, GAT, GraphSAGE 等）
tensor-gnn = ["tensor", "tensor-sparse", "dep:rand_distr", "rand"]

# 内存池优化
tensor-pool = ["tensor", "dep:bitvec"]

# 批量图处理
tensor-batch = ["tensor", "tensor-sparse"]

# ============================================
# 元特性（Meta-Features）- 简化用户配置
# ============================================

# 启用所有 tensor 功能（ndarray + sparse + GNN + pool + batch）
tensor-full = [
    "tensor",
    "tensor-sparse",
    "tensor-gnn",
    "tensor-pool",
    "tensor-batch",
]

# GNN 推理专用（sparse + GNN 层，适合生产推理场景）
tensor-inference = [
    "tensor",
    "tensor-sparse",
    "tensor-gnn",
]

# 机器学习完整支持（GNN + autograd，适合训练场景）
# 注意：需要集成 dfdx/candle 实现完整训练循环
tensor-ml = [
    "tensor",
    "tensor-sparse",
    "tensor-gnn",
    "tensor-autograd",
    "tensor-pool",
]

[dependencies]
# 可选依赖
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
nalgebra = { version = "0.33", optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
crossbeam-queue = { version = "0.3", optional = true }

# SIMD 支持（stable Rust 使用 wide crate）
wide = { version = "0.7", optional = true }

# Tensor 支持（Phase 2 核心 tensor 基础设施）
ndarray = { version = "0.15", optional = true }

# GPU 加速后端
dfdx = { version = "0.13", optional = true, features = ["cuda"] }

# Candle 后端（Hugging Face）
candle-core = { version = "0.8", optional = true }

# 内存池支持
bitvec = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

# GNN 支持
rand_distr = { version = "0.4", optional = true }

[dev-dependencies]
# 基准测试
criterion = { version = "0.5", features = ["html_reports"] }

# 属性测试
proptest = "1.5"

# 随机数生成（测试用）
rand = "0.8"
rand_chacha = "0.3"

# 测试工具
rand_xorshift = "0.3"

# 用于性能对比
petgraph = "0.6"

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "shortest_path"
harness = false

[[bench]]
name = "construction"
harness = false

[[bench]]
name = "parallel"
harness = false
required-features = ["parallel"]

[[bench]]
name = "centrality"
harness = false
required-features = ["rand"]

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "speedup"
harness = false
required-features = ["parallel"]

[[bench]]
name = "tensor_ops"
harness = false
required-features = ["tensor", "tensor-sparse", "tensor-gnn", "tensor-pool"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
