[package]
name = "god-gragh"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
authors = ["silverenternal <3147264070@qq.com>"]
description = "A graph-based LLM white-box optimization toolbox: topology validation, Lie group orthogonalization, tensor ring compression"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silverenternal/god-graph"
homepage = "https://github.com/silverenternal/god-graph"
documentation = "https://docs.rs/god-gragh"
readme = "README.md"
keywords = ["graph", "llm", "optimization", "tensor", "topology"]
categories = ["data-structures", "algorithms", "science", "compilers"]
exclude = [".github/", "benches/", "tests/", "examples/", "ROADMAP.json", ".qwen/"]
autobenches = false

[features]
default = ["std", "parallel"]

# 标准库支持（始终启用）
std = []

# 并行算法支持（默认启用）
parallel = ["dep:rayon", "dep:crossbeam-queue"]

# 序列化支持 (serde is now always enabled, this feature is for backward compatibility)
serde = []

# Rayon 集成（并行迭代器）
rayon-support = ["dep:rayon"]

# DOT 格式导出（Graphviz 可视化）
dot = []

# 矩阵表示和线性代数集成
matrix = ["dep:nalgebra"]

# 随机图生成
rand = []
rand_chacha = ["dep:rand_chacha"]

# 夜间 Rust 特性（实验性）
unstable = []

# SIMD 向量化支持（实验性）
# 使用 wide crate 实现 SIMD，支持 stable Rust
simd = ["dep:wide"]

# Tensor 核心支持（启用 ndarray 后端）
tensor = ["dep:ndarray"]

# Sparse Tensor 格式（COO, CSR, BSR）
tensor-sparse = ["tensor"]

# GPU 加速（通过 dfdx，需要 CUDA）
tensor-gpu = ["tensor", "dep:dfdx"]

# Candle 后端（Hugging Face 的轻量级 tensor 库）
tensor-candle = ["tensor", "dep:candle-core"]

# 自动微分支持
tensor-autograd = ["tensor", "dep:dfdx"]

# Tensor 序列化
tensor-serde = ["tensor"]

# GNN 层（GCN, GAT, GraphSAGE 等）
tensor-gnn = ["tensor", "tensor-sparse", "dep:rand_distr"]

# 内存池优化
tensor-pool = ["tensor", "dep:bitvec", "dep:bumpalo"]

# 批量图处理
tensor-batch = ["tensor", "tensor-sparse"]

# Transformer/LLM support
transformer = ["tensor", "tensor-sparse"]

# Safetensors model loading
safetensors = ["dep:safetensors", "transformer"]

# CAD-LLM Topology Optimization (experimental)
cad-llm = ["tensor", "safetensors"]

# Tokenizer support
tokenizer = ["dep:tokenizers"]

# Full LLM inference support
llm = ["transformer", "safetensors", "tokenizer", "tensor-pool"]

# ============================================
# 元特性（Meta-Features）- 简化用户配置
# ============================================

# 启用所有 tensor 功能（ndarray + sparse + GNN + pool + batch）
tensor-full = [
    "tensor",
    "tensor-sparse",
    "tensor-gnn",
    "tensor-pool",
    "tensor-batch",
]

# GNN 推理专用（sparse + GNN 层，适合生产推理场景）
tensor-inference = [
    "tensor",
    "tensor-sparse",
    "tensor-gnn",
]

# 机器学习完整支持（GNN + autograd，适合训练场景）
# 注意：需要集成 dfdx/candle 实现完整训练循环
tensor-ml = [
    "tensor",
    "tensor-sparse",
    "tensor-gnn",
    "tensor-autograd",
    "tensor-pool",
]

[dependencies]
# 可选依赖
rayon = { version = "1.10", optional = true }
nalgebra = { version = "0.33", optional = true }
rand_chacha = { version = "0.3", optional = true }
crossbeam-queue = { version = "0.3", optional = true }

# SIMD 支持（stable Rust 使用 wide crate）
wide = { version = "0.7", optional = true }

# Tensor 支持（Phase 2 核心 tensor 基础设施）
ndarray = { version = "0.15", optional = true }

# GPU 加速后端
dfdx = { version = "0.13", optional = true, features = ["cuda"] }

# Candle 后端（Hugging Face）
candle-core = { version = "0.8", optional = true }

# 内存池支持
bitvec = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

# Arena 分配器（真正的内存池）
bumpalo = { version = "3.16", optional = true }

# GNN 支持
rand_distr = { version = "0.4", optional = true }

# Transformer/LLM 支持
safetensors = { version = "0.4", optional = true }
tokenizers = { version = "0.19", optional = true }

# Required for transformer module (non-optional)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14"
half = { version = "2.3", features = ["num-traits"] }
rand = "0.8"
smallvec = "1.11"

[dev-dependencies]
# 基准测试
criterion = { version = "0.5", features = ["html_reports"] }

# 属性测试
proptest = "1.5"

# 随机数生成（测试用）
rand = "0.8"
rand_chacha = "0.3"

# 测试工具
rand_xorshift = "0.3"

# 用于性能对比
petgraph = "0.6"

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "shortest_path"
harness = false

[[bench]]
name = "construction"
harness = false

[[bench]]
name = "parallel"
harness = false
required-features = ["parallel"]

[[bench]]
name = "centrality"
harness = false
required-features = ["rand"]

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "speedup"
harness = false
required-features = ["parallel"]

[[bench]]
name = "tensor_ops"
harness = false
required-features = ["tensor", "tensor-sparse", "tensor-gnn", "tensor-pool"]

[[bench]]
name = "tensor_pool"
harness = false
required-features = ["tensor", "tensor-pool"]

[[bench]]
name = "memory_pool_reduction"
harness = false
required-features = ["tensor", "tensor-pool"]

[[bench]]
name = "transformer"
harness = false
required-features = ["transformer", "simd"]

[[bench]]
name = "large_scale_graph"
harness = false
required-features = ["rand"]

[[bench]]
name = "tensor_arena"
harness = false
required-features = ["tensor", "tensor-pool"]

[[example]]
name = "cad_llm_editor"
required-features = ["tensor"]

[[example]]
name = "cad_llm_optimization_workflow"
required-features = ["tensor"]

[[example]]
name = "cad_llm_orthogonalize"
required-features = ["tensor"]

[[example]]
name = "cad_llm_switch"
required-features = ["tensor"]

[[example]]
name = "cad_llm_tensor_ring"
required-features = ["tensor"]

[[example]]
name = "cad_llm_validate_1b"
required-features = ["tensor"]

[[example]]
name = "differentiable_attention_pruning"
required-features = ["tensor"]

[[example]]
name = "differentiable_graph"
required-features = ["tensor"]

[[example]]
name = "export_model_dot"
required-features = ["tensor", "dot"]

[[example]]
name = "graph_transformer_execution"
required-features = ["tensor"]

[[example]]
name = "lie_group_orthogonalization"
required-features = ["tensor"]

[[example]]
name = "llama_forward"
required-features = ["tensor"]

[[example]]
name = "llm_batch_simd"
required-features = ["tensor", "simd"]

[[example]]
name = "llm_model_loader"
required-features = ["tensor"]

[[example]]
name = "llm_text_gen"
required-features = ["tensor"]

[[example]]
name = "neural_architecture_search"
required-features = ["tensor"]

[[example]]
name = "tinyllama_validation"
required-features = ["tensor"]

[[example]]
name = "topology_defect_detection"
required-features = ["tensor"]

[[example]]
name = "transformer_advanced"
required-features = ["tensor"]

[[example]]
name = "transformer_basic"
required-features = ["tensor"]

[[example]]
name = "transformer_overview"
required-features = ["tensor"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
# 启用除 GPU 外的所有特性（GPU 需要 CUDA，docs.rs 不支持）
features = ["std", "parallel", "dot", "matrix", "simd", "tensor", "tensor-sparse", "tensor-gnn", "tensor-pool", "tensor-batch"]
rustdoc-args = ["--cfg", "docsrs"]
