[package]
name = "god-graph"
version = "0.6.0-alpha"
edition = "2021"
rust-version = "1.85"
authors = ["silverenternal <3147264070@qq.com>"]
description = "A graph-based LLM white-box optimization toolbox: topology validation, Lie group orthogonalization, tensor ring compression"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silverenternal/god-graph"
homepage = "https://github.com/silverenternal/god-graph"
documentation = "https://docs.rs/god-graph"
readme = "README.md"
keywords = ["graph", "llm", "optimization", "tensor", "topology"]
categories = ["data-structures", "algorithms", "science", "compilers"]
exclude = [".github/", "benches/", "tests/", "examples/", "ROADMAP.json", ".qwen/"]
autobenches = false

[features]
default = ["std", "parallel"]

# ============================================
# 核心特性（Core Features）
# ============================================

# 标准库支持（始终启用）
std = []

# 并行算法支持（默认启用，Rayon 后端）
parallel = ["dep:rayon", "dep:crossbeam-queue"]

# SIMD 向量化支持（wide::f64x4）
simd = ["dep:wide"]

# 随机数生成（用于随机图生成、GNN 初始化）
rand = ["dep:rand_distr"]

# ============================================
# Tensor 核心功能（精简为 3 个特性）
# ============================================

# Tensor 基础支持（ndarray 后端，包含 Dense/Sparse）
tensor = ["dep:ndarray"]

# Sparse Tensor 支持（COO/CSR 格式，需要 tensor）
tensor-sparse = ["tensor"]

# GNN 层支持（GCN/GAT/GraphSAGE，需要 tensor + rand）
tensor-gnn = ["tensor", "rand"]

# 自动微分支持（需要 tensor）
tensor-autograd = ["tensor"]

# 内存池优化（迭代算法性能提升 6-7x）
tensor-pool = ["tensor", "dep:bitvec", "dep:bumpalo"]

# ============================================
# Transformer / LLM 支持
# ============================================

# Transformer 基础架构（需要 tensor）
transformer = ["tensor"]

# Safetensors 模型加载（HuggingFace 格式）
safetensors = ["dep:safetensors", "transformer"]

# Tokenizer 支持
tokenizer = ["dep:tokenizers"]

# 完整 LLM 支持（transformer + safetensors + tokenizer + tensor-pool）
llm = ["transformer", "safetensors", "tokenizer", "tensor-pool"]

# ============================================
# 实验性/特殊用途特性
# ============================================

# 序列化支持（向后兼容）
serde = []

# DOT 格式导出（Graphviz 可视化）
dot = []

# 矩阵表示和线性代数集成（nalgebra）
matrix = ["dep:nalgebra"]

# 夜间 Rust 特性（SIMD 预取等）
unstable = []

# GPU 加速（dfdx，需要 CUDA 环境）
tensor-gpu = ["tensor", "dep:dfdx"]

# Candle 后端（HuggingFace 轻量级 tensor 库）
tensor-candle = ["tensor", "dep:candle-core"]

# BLAS 加速（OpenBLAS/MKL，大矩阵乘法）
tensor-blas = ["tensor", "dep:blas-src", "dep:openblas-src"]

# CAD-LLM 拓扑优化（实验性）
cad-llm = ["tensor", "safetensors"]

# ============================================
# 元特性（Meta-Features）- 简化用户配置
# ============================================

# 完整 Tensor 支持（适合 GNN 训练和开发）
tensor-full = ["tensor", "tensor-gnn", "tensor-pool"]

# GNN 推理专用（轻量级部署）
tensor-inference = ["tensor", "tensor-gnn"]

# 全局 jemalloc 分配器（多线程性能提升 20-50%）
jemalloc = ["dep:tikv-jemallocator"]

# 索引 HashMap（确定性迭代顺序）
indexmap = ["dep:indexmap"]

# 分布式系统支持
distributed = ["dep:dashmap", "dep:crossbeam-queue"]

# MCP Server 支持
mcp = ["dep:parking_lot", "dep:rustc-hash"]

[dependencies]
# 可选依赖
rayon = { version = "1.10", optional = true }
nalgebra = { version = "0.33", optional = true }
crossbeam-queue = { version = "0.3", optional = true }

# SIMD 支持（stable Rust 使用 wide crate）
wide = { version = "0.7", optional = true }

# Tensor 支持（Phase 2 核心 tensor 基础设施）
ndarray = { version = "0.15", optional = true }

# BLAS 后端加速（large matrix matmul）
blas-src = { version = "0.9", optional = true }
openblas-src = { version = "0.10", optional = true, features = ["cblas", "system"] }

# GPU 加速后端
dfdx = { version = "0.13", optional = true, features = ["cuda"] }

# Candle 后端（Hugging Face）
candle-core = { version = "0.8", optional = true }

# 内存池支持
bitvec = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

# Arena 分配器（真正的内存池）
bumpalo = { version = "3.16", optional = true }

# GNN 支持
rand_distr = { version = "0.4", optional = true }

# jemalloc 全局分配器（可选，提升多线程性能）
tikv-jemallocator = { version = "0.5", optional = true }

# 索引 HashMap（确定性迭代，可选）
indexmap = { version = "2.0", optional = true }

# 并发 HashMap（lock-free，用于分布式模块）
dashmap = { version = "5.5", optional = true }

# 快速 HashMap（Faster hashing for string keys）
rustc-hash = { version = "1.1", optional = true }

# 并发锁（用于 MCP 服务器）
parking_lot = { version = "0.12", optional = true }

# Transformer/LLM 支持
safetensors = { version = "0.4", optional = true }
tokenizers = { version = "0.19", optional = true }

# Required for transformer module (non-optional)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14"
half = { version = "2.3", features = ["num-traits"] }
rand = "0.8"
smallvec = "1.11"

[dev-dependencies]
# 基准测试
criterion = { version = "0.5", features = ["html_reports"] }

# 属性测试
proptest = "1.5"

# 随机数生成（测试用）
rand = "0.8"
rand_chacha = "0.3"

# 测试工具
rand_xorshift = "0.3"

# 用于性能对比
petgraph = "0.6"

# 临时文件支持（测试用）
tempfile = "3.10"

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "shortest_path"
harness = false

[[bench]]
name = "construction"
harness = false

[[bench]]
name = "parallel"
harness = false
required-features = ["parallel"]

[[bench]]
name = "centrality"
harness = false
required-features = ["rand"]

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "speedup"
harness = false
required-features = ["parallel"]

[[bench]]
name = "tensor_ops"
harness = false
required-features = ["tensor", "tensor-gnn", "tensor-pool"]

[[bench]]
name = "tensor_pool"
harness = false
required-features = ["tensor", "tensor-pool"]

[[bench]]
name = "tensor_arena"
harness = false
required-features = ["tensor", "tensor-pool"]

[[bench]]
name = "memory_pool_reduction"
harness = false
required-features = ["tensor", "tensor-pool"]

[[bench]]
name = "transformer"
harness = false
required-features = ["transformer", "simd"]

[[bench]]
name = "large_scale_graph"
harness = false
required-features = ["rand"]

# transformer_inference requires nightly Rust (uses #![feature(test)])
# To run it: rustup run nightly cargo bench --features "transformer,simd,unstable" --bench transformer_inference
[[bench]]
name = "transformer_inference"
harness = false
required-features = ["transformer", "simd", "unstable"]

[[bench]]
name = "distributed"
harness = false

[[example]]
name = "cad_llm_editor"
required-features = ["tensor"]

[[example]]
name = "cad_llm_optimization_workflow"
required-features = ["tensor"]

[[example]]
name = "cad_llm_orthogonalize"
required-features = ["tensor"]

[[example]]
name = "cad_llm_switch"
required-features = ["safetensors"]

[[example]]
name = "cad_llm_tensor_ring"
required-features = ["tensor"]

[[example]]
name = "cad_llm_validate_1b"
required-features = ["tensor", "safetensors"]

[[example]]
name = "differentiable_attention_pruning"
required-features = ["tensor", "tensor-pool", "transformer", "safetensors"]

[[example]]
name = "differentiable_graph"
required-features = ["tensor"]

[[example]]
name = "export_model_dot"
required-features = ["transformer", "dot"]

[[example]]
name = "graph_transformer_execution"
required-features = ["transformer"]

[[example]]
name = "lie_group_orthogonalization"
required-features = ["tensor"]

[[example]]
name = "llama_forward"
required-features = ["tensor", "safetensors", "tensor-pool", "transformer"]

[[example]]
name = "llm_batch_simd"
required-features = ["transformer"]

[[example]]
name = "llm_model_loader"
required-features = ["transformer", "safetensors"]

[[example]]
name = "llm_text_gen"
required-features = ["transformer"]

[[example]]
name = "neural_architecture_search"
required-features = ["tensor"]

[[example]]
name = "tinyllama_validation"
required-features = ["tensor", "safetensors"]

[[example]]
name = "topology_defect_detection"
required-features = ["tensor"]

[[example]]
name = "transformer_advanced"
required-features = ["transformer"]

[[example]]
name = "transformer_basic"
required-features = ["transformer"]

[[example]]
name = "transformer_overview"
required-features = ["transformer"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
# 启用除 GPU 外的所有特性（GPU 需要 CUDA，docs.rs 不支持）
features = ["std", "parallel", "dot", "matrix", "simd", "tensor", "tensor-gnn", "tensor-pool", "transformer", "safetensors"]
rustdoc-args = ["--cfg", "docsrs"]
